# Pitch-detector

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindSDL2IMAGE.cmake  FindSDL2MIXER.cmake
icon/: icon.icns  instructions.txt
src/: audio_rendering.c  audio_rendering.h  audio_system.c  audio_system.h  calculate_frequency.c  calculate_frequency.h  colors.c  colors.h  constants.h  convert_frequency.c  convert_frequency.h  credits.c  credits.h  fonts.c  fonts.h  main.c  measure_frequency.c  measure_frequency.h  rendering_helper.c  rendering_helper.h  select_audio_device.c  select_audio_device.h  select_audio_driver.c  select_audio_driver.h  states.h  text_rendering.c  text_rendering.h  user_interface.c  user_interface.h
